<resources>
    <string name="app_name">Mr. Nutrition</string>

    <!--NetWork-->
    <string name="server_error">Server Error</string>
    <string name="no_internet">>No Internet Available. Please Check the Connection</string>

    <!--Drawer-->
    <string name="home">Home</string>
    <string name="product_cate">Product Categories</string>
    <string name="brands">Brands</string>
    <string name="supplements">Supplements</string>
    <string name="shakers_and_acces">Shakers and Accessories</string>
    <string name="others">Others</string>
    <string name="deals">Deals</string>
    <string name="special_offers">Special Offers</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="hot_deals_new_arr"> Hot Deals (New Arrivals)</string>
    <string name="my_account">My Account</string>
    <string name="my_cart">My Cart</string>
    <string name="wish_list">Wish List</string>
    <string name="info">Information</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="payment_methods">Payment Methods</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Splash Screen-->
    <string name="continue_text">Continue</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
