<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mawaqaa.mrnutrition.activity.CountryPickerActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:src="@drawable/mr_nutrition_logo_with_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="36dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_language_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/language_english" />

            <ToggleButton
                android:id="@+id/switch_language_select"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_splash_toggle"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/tv_language_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/language_arabic" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_spinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="36dp"

            android:layout_marginRight="36dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/custom_spinner_border"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_country_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/view_black"
                android:background="@android:color/transparent"
                android:duplicateParentState="true"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <View
                android:id="@+id/view_black"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/img_spinner_dwn_arrow"
                android:background="@android:color/black"
                android:duplicateParentState="true" />

            <ImageView
                android:id="@+id/img_spinner_dwn_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/ic_down_spinner" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_continue_btn"
            android:layout_width="190dp"
            android:layout_height="46dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/selector_continue_btn_splash"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_continue_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="16dp"
                android:duplicateParentState="true"
                android:src="@drawable/selector_splsh_continue_btn_left_drawer" />

            <Button
                android:id="@+id/btn_splash_continue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:duplicateParentState="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/continue_text"

                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
